# simple-sfml-game-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: beam.cpp  beam.h  cat.cpp  cat.h  drawable.cpp  drawable.h
